--- a/README.org
+++ b/README.org
@@ -1,5 +1,9 @@
 A codebase to host jackbox-style multiplayer games,
 where a moderator can create rooms and players can join
 
-(Ethan hasn't written a readme yet
+The idea is to make multiplayer games where large numbers of players can join. I
+don't know what the upper limit of concurrent players is, so please tell me if
+you find out.
+
+(Ethan hasn't written a proper readme yet
 but he intends to)
